# Personal-Project

./: .gitignore  BaoCao.md  data_sourcing.ipynb  note  rain_stats.txt
13_News_Media/project8_newsdata/: SYSTEM_DESIGN.md  note  pyproject.toml  requirements.txt
13_News_Media/project8_newsdata/config/: categories.yaml  default.yaml  knowledge_base.json
13_News_Media/project8_newsdata/data/: dataset_statistics.json  disaster_data_enhanced_v1.csv  disaster_data_enhanced_v2.csv  disaster_data_enhanced_v3.csv  knowledge_base_review.json
13_News_Media/project8_newsdata/fine_tuning/config/: config.yaml
13_News_Media/project8_newsdata/fine_tuning/scripts/: annotate_data.py  train_event_extraction.py  train_relation_extraction.py
13_News_Media/project8_newsdata/keyword_extraction/: __init__.py  requirements.txt  run.py
13_News_Media/project8_newsdata/keyword_extraction/docs/: README.md
13_News_Media/project8_newsdata/keyword_extraction/scripts/: keyword_extractor.py
13_News_Media/project8_newsdata/llm_extraction/: SUMMARY.md  __init__.py  run.py
13_News_Media/project8_newsdata/llm_extraction/config/: llm_config.py  prompts.py
13_News_Media/project8_newsdata/llm_extraction/scripts/: llm_extractor.py
13_News_Media/project8_newsdata/ner_entity_extraction/: SUMMARY.md  lightweight_demo.py  run.py  simple_demo.py
13_News_Media/project8_newsdata/ner_entity_extraction/config/: entity_definitions.py  nlp_config.py
13_News_Media/project8_newsdata/ner_entity_extraction/data/: ner_comparison_results.json  ner_demo_output.json  ner_results_phoner.json  ner_results_spacy.json  ner_results_vncorenlp.json
13_News_Media/project8_newsdata/ner_entity_extraction/scripts/: ner_extractor.py  phoner_extractor.py  spacy_custom_extractor.py  vncorenlp_extractor.py
13_News_Media/project8_newsdata/pattern_extraction/: __init__.py
13_News_Media/project8_newsdata/pattern_extraction/config/: settings.py
13_News_Media/project8_newsdata/rag_extraction/: .dockerignore  Dockerfile  __init__.py  run_rag.py  test_system.py
13_News_Media/project8_newsdata/rag_extraction/config/: prompts.py
13_News_Media/project8_newsdata/rag_extraction/scripts/: rag_extractor.py
13_News_Media/project8_newsdata/relation_extraction/: SUMMARY.md  requirements.txt  run.py
13_News_Media/project8_newsdata/relation_extraction/config/: re_config.py  relation_definitions.py
13_News_Media/project8_newsdata/relation_extraction/scripts/: llm_re_extractor.py  rule_based_re_extractor.py
13_News_Media/project8_newsdata/scripts/: export_to_csv_enhanced_v1.py  export_to_csv_enhanced_v2.py  export_to_csv_enhanced_v3.py  export_to_csv_enhanced_v4.py
3_travel/: fetch_and_save_places.py  generate_tours.py  test_rapidapi_integration.py  test_search_results.py  update_avg_price_log.txt
4_gemini/: test_geminiapi.py
7_Image Captioning Model for Football Highlights (2025)/: .gitignore  README.md  requirements.txt  (+1 more)
(+677 files in other folders)
